wip validation and defaults
