# assets/openapi.yaml
@@ -76,6 +76,8 @@ paths:
             minimum: 1
             maximum: 5
             default: 3
+          x-oapi-codegen-extra-tags:
+            validate: gt=1,lte=5
         - name: minDepth
           in: query
           description: "Minimum depth of the JSON object"
@@ -84,6 +86,8 @@ paths:
             minimum: 1
             maximum: 3
             default: 1
+          x-oapi-codegen-extra-tags:
+            validate: gt=0,lte=3
         - name: maxElems
           in: query
           description: "Maximum number of elements per JSON object"
@@ -92,6 +96,8 @@ paths:
             minimum: 1
             maximum: 10
             default: 3
+          x-oapi-codegen-extra-tags:
+            validate: gt=0,lte=10
       responses:
         '200':
           description: JSON data.
@@ -118,6 +124,8 @@ paths:
             minimum: 1
             maximum: 10000
             default: 10
+          x-oapi-codegen-extra-tags:
+            validate: gt=1,lte=10000
       responses:
         '200':
           description: Log data.
@@ -230,6 +238,12 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
+        '400':
+          description: Bad request - validation failed.
+          content:
+            application/json:
+              schema:
+                  $ref: '#/components/schemas/ValidationError'
 
   # --- Streaming Endpoints ---
   /stream/json/user:
@@ -355,6 +369,8 @@ paths:
           type: integer
           minimum: 100
           maximum: 599
+        x-oapi-codegen-extra-tags:
+          validate: gt=100,lte=599
     get:
       tags:
         - Status Codes
@@ -497,11 +513,35 @@ components:
           x-oapi-codegen-extra-tags:
             fake: "{randomstring:[male,female,other]}"
         contact:
-          type: object
           $ref: '#/components/schemas/Contact'
         address:
-          type: object
           $ref: '#/components/schemas/Address'
+    ValidationError:
+      type: object
+      properties:
+        status_code:
+          type: integer
+        message:
+          type: string
+        errors:
+          $ref: '#/components/schemas/ValidationMessages'
+      required:
+        - status_code
+        - message
+    ValidationMessages:
+      type: array
+      items:
+        $ref: '#/components/schemas/ValidationMessage'
+    ValidationMessage:
+      type: object
+      properties:
+        field:
+          type: string
+        message:
+          type: string
+      required:
+        - field
+        - message
     Log:
       type: object
       properties:
@@ -549,23 +589,23 @@ components:
           type: string
         default: [ debug, info, warn, error ]
     LogLevelWeights:
-        name: logLevelWeights
-        in: query
-        description: "Log level weights (default: `1,5,3,2`)"
-        schema:
-          type: array
-          items:
-            type: number
-          default: [ 1, 5, 3, 2 ]
+      name: logLevelWeights
+      in: query
+      description: "Log level weights (default: `1,5,3,2`)"
+      schema:
+        type: array
+        items:
+          type: number
+        default: [ 1, 5, 3, 2 ]
     StreamInterval:
-        name: interval
-        in: query
-        description: "Interval in milliseconds between streamed responses (min: 0; max: 5000)"
-        schema:
-            type: integer
-            minimum: 0
-            maximum: 5000
-            default: 250
+      name: interval
+      in: query
+      description: "Interval in milliseconds between streamed responses (min: 0; max: 5000)"
+      schema:
+        type: integer
+        minimum: 0
+        maximum: 5000
+        default: 250
     Count:
       name: count
       in: query
@@ -575,7 +615,9 @@ components:
         minimum: 1
         maximum: 10000
         default: 10
-
+      x-oapi-codegen-extra-tags:
+        validate: gt=1,lte=10000
+        default: "10"
 tags:
   - name: Meta
     description: "Endpoints providing meta functionality."
